# TORK

./: .env.example  .gitignore  2026-05-03-033233-homelg0egg-tork-v01.txt  Dockerfile  LICENSE  LICENSE-CORE.md  Makefile  Makefile.cross  Makefile.edge  Makefile.win32  README.md  TORK-x86_64.AppImage  TORK_ARCHITECTURE.md  build-installer.sh  build.sh  code_modifier.c  code_modifier.h  code_reader.c  code_reader.h  docker-compose.yml  film_observer.py  inbox.md  index.html  instinct.c  instinct.h  setup_api.sh  soul_access.h  tork.sh  tork_aurora.py  tork_core.asm  tork_desktop.py  tork_engine.c  tork_floating.py  tork_floating.py.bak  tork_floating.py.tkinter_bak  tork_hotkey.py  tork_watchdog.sh  tork_watchdogd.py  tork_windows_pet.py  前端.md  (+1 more)
AppDir/: AppRun  tork.desktop
BITNET/: BITNET_DEPLOY.md
api/: tork_api.py
app/: tork_app.py
cloud/: __init__.py  cloud_protocol.py  code_bridge.py  evolution.py  evolution_daemon.py  evolve_real.py  strategy_generator.py  validator.py
code/: code_modifier.c  code_modifier.h  code_reader.c
config/: tork_floating.json
core/: tork_core.asm  tork_core.asm.bak  tork_soul.inc
docs/: 5MIN.md  AUDIT-TECH.md  COVENANT.md  INDEX.md  (+11 more)
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: common.rs  lib.rs  main.rs  soul_parser.rs  state.rs  torkd_bridge.rs
tauri-app/src-tauri/src/background/: beacon_listener.rs  mod.rs  poll_loop.rs  proc_watcher.rs
tauri-app/src-tauri/src/commands/: beacon.rs  chat.rs  evolution.rs  file_ops.rs  mod.rs  socket.rs
(+310 files in other folders)
